fixed (nitpicked) alignment of ::after for styled radio buttons

--- a/Erasmus/src/css/bootmetro.css
+++ b/Erasmus/src/css/bootmetro.css
@@ -1931,8 +1931,8 @@ input[type=checkbox]:checked ~ span.metro-radio::after {
    content: "\e10b";
    background: #000;
    position: absolute;
-   left: 5px;
-   top: 7px;
+   left: 5.5px;
+   top: 7.5px;
    width: 12px;
    height: 12px;
    z-index: 1000;
